@@ -1,9 +1,21 @@
 package com.easyfarming;
 
 import net.runelite.api.Client;
+import net.runelite.api.gameval.VarbitID;
+import net.runelite.api.gameval.InterfaceID;
+import net.runelite.api.widgets.Widget;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import java.util.Arrays;
 import java.util.List;
 
 public class InventoryTabChecker {
+    private static final Logger log = LoggerFactory.getLogger(InventoryTabChecker.class);
+    
+    // Lists for each tab state
+    private static final List<Integer> INVENTORY = Arrays.asList(3);
+    private static final List<Integer> SPELLBOOK = Arrays.asList(6);
+
     public enum TabState {
         INVENTORY,
         SPELLBOOK,
@@ -14,8 +26,8 @@ public class InventoryTabChecker {
         int varbitValue = client.getVarcIntValue(varbitIndex);
         
         // Original working logic - keep this for now
-        List<Integer> INVENTORY = List.of(3);
-        List<Integer> SPELLBOOK = List.of(6);
+        List<Integer> INVENTORY = Arrays.asList(3);
+        List<Integer> SPELLBOOK = Arrays.asList(6);
         
         if (INVENTORY.contains(varbitValue)) {
             return TabState.INVENTORY;
